--- a/products/templates/Products/base.html
+++ b/products/templates/Products/base.html
@@ -18,6 +18,28 @@
             margin-right: auto;
         }
 
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            border: 1px solid #ccc;
+            margin-top: 20px;
+            overflow-y: auto;
+        }
+
+        th, td {
+            text-align: left;
+            padding: 8px;
+        }
+
+        th {
+            background-color: teal;
+            color: white;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        
         .footer {
             position: fixed;
             bottom: 0;
